projects/automation/evolution-api/evolution-api-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evolution-api
  namespace: automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evolution-api
  template:
    metadata:
      labels:
        app: evolution-api
    spec:
      containers:
      - name: evolution-api
        image: atendai/evolution-api:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: storage
          mountPath: /evolution/instances
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: evolution-api-pvc
