projects/automation/evolution-api/evolution-api-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: evolution-api-service
  namespace: automation
spec:
  selector:
    app: evolution-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
