projects/automation/evolution-api/evolution-api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: evolution-api-ingressroute
  namespace: automation
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whatsapp.armandogil.es`)
      kind: Rule
      services:
        - name: evolution-api-service
          port: 80
  tls:
    secretName: whatsapp-tls-cert
